Dabase setup widget
